--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>36</title>
+    <title>CoinChecker</title>
     <link rel="shortcut icon" type="image/x-icon" href="img/Icon.png" />
 
     <!-- Bootstrap core CSS -->
