about page compleated

--- a/about.html
+++ b/about.html
@@ -76,6 +76,9 @@
       <div class="centreDiv">
         <p>This website was created as a project for a portfolio assigment for city and guilds. This will be handed up to brain Rogers on the 14/12/18</p>
       </div>
+      <div>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/Gc2en3nHxA4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
     </div>
   </div>
 
